--- a/settings.yml
+++ b/settings.yml
@@ -4,7 +4,7 @@
 #
 # Reference documentation: https://github.com/cncf/landscape2/blob/main/docs/config/settings.yml
 
-foundation: DEMO
+foundation: Tazama Project
 
 url: http://127.0.0.1:8000
 
@@ -26,16 +26,16 @@ featured_items:
 
 footer:
   links:
-    facebook: "https://www.facebook.com/CloudNativeComputingFoundation/"
-    flickr: "https://www.flickr.com/photos/143247548@N03/albums"
+   # facebook: "https://www.facebook.com/XXXX/"
+   # flickr: "https://www.flickr.com/photos/XXXX"
     github: "https://github.com/cncf"
     homepage: "https://cncf.io"
-    instagram: "https://www.instagram.com/humans.of.cloudnative/"
+   # instagram: "https://www.instagram.com/XXXX/"
     linkedin: "https://www.linkedin.com/company/cloud-native-computing-foundation/"
     slack: "https://slack.cncf.io/"
-    twitch: "https://www.twitch.tv/cloudnativefdn"
+   # twitch: "https://www.twitch.tv/XXXX"
     twitter: "https://twitter.com/cloudnativefdn"
-    wechat: "https://www.cncf.io/wechat/"
+   # wechat: "https://www.XXXX/wechat/"
     youtube: "https://www.youtube.com/c/cloudnativefdn"
   logo: "https://raw.githubusercontent.com/cncf/artwork/master/other/cncf/horizontal/white/cncf-white.svg"
 
@@ -52,7 +52,7 @@ groups:
 
 header:
   links:
-    github: "https://github.com/cncf/landscape2"
-  logo: "https://raw.githubusercontent.com/cncf/artwork/master/other/cncf-landscape/horizontal/color/cncf-landscape-horizontal-color.svg"
+    github: "https://github.com/tazama-lf/tazama-landscape"
+  logo: "https://github.com/tazama-lf/tazama-landscape/blob/main/images/left-logo.svg"
 
 screenshot_width: 1500
